Add secrets + skills plugins, workbench secrets UI, and 2-way Portal loop
- Secrets plugin: sealed LATSEC1 store, {{secret:label}} substitution,
  output redaction sweep, secret_list_handles tool (use-without-seeing)
- Skills plugin: Malli-closed .edn skills, tiered progressive disclosure
  (load_skill / read_skill_file), fail-closed dir loading
- Workbench: secrets-management UI + /api/secrets (labels-only API),
  portal_selected read-back, POST /api/portal-event 2-way artifact
  loop with INTERACTIVE guidance; WorkbenchConfig gains :secret-store
- New docs: secrets.md, skills.md, workbench-2way.md
- README + AGENT_INSTRUCTIONS rewritten to match current code state
- Suite: 940 tests / 3142 assertions green; clj-kondo clean